fixed perm size error